@@ -2,15 +2,17 @@
 Hash: SHA1
 
 DIST thinking-sphinx-1.3.13.gem 139776 RMD160 d490bc8fd8139cfbe70f0c715e8e57006e2b8c97 SHA1 9ff616a4a405e63e6ce82b989d6857976f99f52c SHA256 bee781677417130d9da8859b3bf63136d7eac0595de12f509b96a37a3c9734be
+DIST thinking-sphinx-1.3.14.gem 139776 RMD160 6a34e9d28b7371b5e18778a6c506cd24485e2538 SHA1 f672e532cae22422f194a5f27629585665353168 SHA256 7ab2c4d0647f2600a27a73c0e24c02f44c1c62defd18abe36e6bd7371d4e0410
 DIST thinking-sphinx-1.3.8.gem 138240 RMD160 6a69ff0d17f43c9d46945ae87c0072665507502a SHA1 75d28a94796938d70b470c03535e1e08bdc952c9 SHA256 4e3a420df8a6bd62bdc8a357324b832c898058033a3af0451e1734671715db6f
 EBUILD thinking-sphinx-1.3.13.ebuild 632 RMD160 60cf7df937d6a5129cef518f288a61bc08cdcbb8 SHA1 64b5e347076e24b58acdd63b4d64f46199bccf69 SHA256 753e0cc44030577e56547d1b46e6d3808b0eeefa9fe27e03494658eeefba4ec5
+EBUILD thinking-sphinx-1.3.14.ebuild 632 RMD160 319b332f08fbf21c2424d41b0926558d11147e20 SHA1 f0e9c62bce76f632e7306f713c975c21c52302fa SHA256 6242666802375db0b28d7aafd44751406b66dca96eb887e5bf78d9bee97e4f62
 EBUILD thinking-sphinx-1.3.8.ebuild 632 RMD160 ac59bcd3cd69f39b5c47cd88704e4a6e92b69c1a SHA1 8b4add2f63ee21aa2000b7f4500b987627a2d6a6 SHA256 a12b9d8559aef586006647c8638102562a00381cd1079b0b5959386cf234066a
-MISC ChangeLog 551 RMD160 29111d8e41580e82a9ea2e4a2580ed4c81aa6b89 SHA1 81f0c59f77c4ed1a2bb894046fa89df245729868 SHA256 4472a32ed4ea325d3834523bf464fe2d611fa5e40159e53374aa8f0d597d9de6
+MISC ChangeLog 691 RMD160 c942dec171124f4f0357fb5bfbf8f5752e03e500 SHA1 052d9bd779b41328189678600ea6421e5382151e SHA256 00e4fc2df0b9262890d6dcf0e09de3d2ce2b912998e4f43fc741ee10788108c8
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAksn9o4ACgkQeM7EJeUH71P5jgCdGPL4SXnc1QDlkmnFWSHQWwKk
-/yYAnjHcpgtiBtfFF3qMSqPp0/AQxll4
-=0TPW
+iEYEARECAAYFAktIO1UACgkQeM7EJeUH71OtiACfbGqnaHGoWE15RuLup/XNJCDU
+1KsAn2cF3vvtWYI9K5LdzC9LA4FEj6SA
+=0Egf
 -----END PGP SIGNATURE-----
