@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/thinking-sphinx
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*thinking-sphinx-1.3.14 (09 Jan 2010)
+
+  09 Jan 2010; Hans de Graaff <graaff@gentoo.org>
+  +thinking-sphinx-1.3.14.ebuild:
+  Version bump.
 
 *thinking-sphinx-1.3.13 (15 Dec 2009)
 
